No otorgar permiso bloquea settings preferences en android 13 #40
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -4,6 +4,7 @@
     app:key="preferenceScreen">
 
     <PreferenceCategory
+        android:key="@string/notifications_category_key"
         app:icon="@drawable/round_notifications_24"
         app:iconSpaceReserved="false"
         app:summary="@string/alert_pref_summary"
