--- a/app/src/main/res/layout/card_view_share_quake.xml
+++ b/app/src/main/res/layout/card_view_share_quake.xml
@@ -2,10 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_share_quake"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/corner_radius_16dp"
-    app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,7 +13,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/google_map_screenshot"
             android:padding="1dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
